--- a/redis/pom.xml
+++ b/redis/pom.xml
@@ -51,6 +51,16 @@
 			<artifactId>jedis</artifactId>
 			<version>3.4.1</version>
 		</dependency>
+		<dependency>
+			<groupId>io.lettuce</groupId>
+			<artifactId>lettuce-core</artifactId>
+			<version>6.0.1.RELEASE</version>
+		</dependency>
+		<dependency>
+			<groupId>org.assertj</groupId>
+			<artifactId>assertj-core</artifactId>
+		</dependency>
+
 
 	</dependencies>
 
